--- a/viXcode4/viXcode4-Info.plist
+++ b/viXcode4/viXcode4-Info.plist
@@ -25,6 +25,41 @@
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2011 __MyCompanyName__. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
-	<string></string>
+	<string>viXcode4</string>
+	<key>SIMBLTargetApplications</key>
+	<array>
+        <dict>
+        <key>BundleIdentifier</key>
+        <string>com.apple.dt.Xcode</string>
+        <key>MaxBundleVersion</key>
+        <string>99</string>
+        <key>MinBundleVersion</key>
+        <string>99</string>
+        </dict> 
+        <dict>
+        <key>BundleIdentifier</key>
+        <string>com.apple.Xcode</string>
+        <key>MaxBundleVersion</key>
+        <string>1761</string>
+        <key>MinBundleVersion</key>
+        <string>1761</string>
+        </dict> 
+        <dict>
+        <key>BundleIdentifier</key>
+        <string>com.apple.Safari</string>
+        <key>MaxBundleVersion</key>
+        <string>6533.21.1</string>
+        <key>MinBundleVersion</key>
+        <string>6533.21.1</string>
+        </dict> 
+        <dict>
+        <key>BundleIdentifier</key>
+        <string>com.apple.TextEdit</string>
+        <key>MaxBundleVersion</key>
+        <string>264</string>
+        <key>MinBundleVersion</key>
+        <string>264</string>
+        </dict> 
+    </array>
 </dict>
 </plist>
